kubernetes/overlays/local/ingress-apps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mats
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: mats.127.0.0.1.nip.io
      http:
        paths:
          - path: /scorecard
            pathType: Prefix
            backend:
              service:
                name: scorecard
                port:
                  number: 80
          - path: /airQuality
            pathType: Prefix
            backend:
              service:
                name: airQuality
                port:
                  number: 80
          - path: /cb-metar
            pathType: Prefix
            backend:
              service:
                name: cb-metar
                port:
                  number: 80
          - path: /cb-raob
            pathType: Prefix
            backend:
              service:
                name: cb-raob
                port:
                  number: 80
          - path: /ceil-vis
            pathType: Prefix
            backend:
              service:
                name: ceil-vis
                port:
                  number: 80
          - path: /ceil-vis15
            pathType: Prefix
            backend:
              service:
                name: ceil-vis15
                port:
                  number: 80
          - path: /landuse
            pathType: Prefix
            backend:
              service:
                name: landuse
                port:
                  number: 80
          - path: /precipaccum
            pathType: Prefix
            backend:
              service:
                name: precipaccum
                port:
                  number: 80
          - path: /precipgauge
            pathType: Prefix
            backend:
              service:
                name: precipgauge
                port:
                  number: 80
          - path: /precipitation1hr
            pathType: Prefix
            backend:
              service:
                name: precipitation1hr
                port:
                  number: 80
          - path: /radar
            pathType: Prefix
            backend:
              service:
                name: radar
                port:
                  number: 80
          - path: /surface
            pathType: Prefix
            backend:
              service:
                name: surface
                port:
                  number: 80
          - path: /surfrad
            pathType: Prefix
            backend:
              service:
                name: surfrad
                port:
                  number: 80
          - path: /upperair
            pathType: Prefix
            backend:
              service:
                name: upperair
                port:
                  number: 80
